src/main/webapp/css/tdar-bootstrap.css
/* ... */
/*jtd: I'm moving this to datatables.css */
/*ab: ok, then why is it still here :( */
div.dataTables_length label {
	width: 460px;
	float: left;
	text-align: left;
}

div.dataTables_length select {
	width: 75px;
}

div.dataTables_filter label {
	float: right;
	width: 460px;
}

div.dataTables_info {
	padding-top: 8px;
}

/* TODO: this is not necessary if you use bootstrap's pagination-right class, but i'm not sure how to get widget to inject this class into pagination section */
div.dataTables_paginate {
	float: right;
	margin: 0;
}

table.display.tableFormat {
	margin-top: 0px !important;
}

/* See TDAR-3106 */
table.dataTable {
  max-width: none;
}

div.mapcontainer {
	position: relative;
}

div.mapcontainer img {
	height: 304px !Important;
	right: 0px;
	display: block;
	position: relative;
}

#cbCheckAllToggle,.sorting_1 input[type='checkbox'] {
	margin-right: 10px !Important;
	margin-left: 10px !Important;
}

#drplist .ui-droppable {
	min-height: 100px;
	position: relative;
}

.legend {
	line-height: 1.2em;
}

table.legend {
	border-top: 1px solid #AAA;
	border-bottom: 1px solid #AAA;
}

.defaultColumn , .buttontable div, .columnSquare.coded {
	background: #eeeeee; 
	border: 1px solid #999999;
}



.displayColumn {
	background:#E9E4CD;
	border: 1px solid #999999;
}

.buttontable td,.integrationColumn,.displayColumn {
	vertical-align: top;
}

.columnSquare {
	display: inline-block;
	border: 1px solid #999;
	margin-right: 5px;
	bottom: -.15em !important;
	width: .8em;
	height: .8em;
	padding: 0px;
}

.countColumn,.buttontable div[data-count],.columnSquare.count {
	background: #e5e696; /* Old browsers */
	border: 1px solid #999999;
}

.measurementColumn,.buttontable div[data-measurement],.columnSquare.measurement
	{
	background: #deefff; /* Old browsers */
	border: 1px solid #999999;
}

.integrationColumn,.buttontable div[data-ontology],.columnSquare.integration
	{
	background: #e4efc0; /* Old browsers */
	border: 1px solid #999999;
}

.columnSquare span:before {
    font-size: 14px;
    font-weight: bold;
    position: relative;
    font-family: helvetica;
    display:inline-block;
    text-align: center;
    width:1em;
    top: -3px;
}

.columnSquare.complete span:before {
	content:"\2713"; /* check mark */
	color:#000;
}

.columnSquare.invalid span:before {
	content: "X";
	color: #7a1501;
}
.columnSquare.mapped {
	background: #8b755e;
}



.mappingInfo label {
	position: static;
}

.mappingInfo input {
	margin-left: 1em;
}

.mappingInfo input[type="checkbox"] {
	margin-left: 1em;
}

.buttontable {
	border-spacing: 0px;
	border: 1px solid #CCC;
}

.buttontable .columnName {
	font-weight: bold !important;
}

.buttontable .ontology {
	font-weight: normal !important;
}

#drplist button {
	font-size: 80%;
}

#drplist td div {
	position: relative !important;
	border-bottom: 1px solid #AEAEAE;
	/*    height: 3.2em; */
}

.short .columnName {
	width: 100px;
	overflow: hidden;
}

.short button {
	visibility: hidden;
}

.short .ontology {
	display: none;
}

.tableContainer {
	background-color: #BEBEBE;
}

.bullet+.bullet:before {
	content: "\002022  "
}

#project-list .dataTables_wrapper { /*    width: 700px */
	
}

#home .form-actions {
	border: none;
	background-color: transparent
}

.inline-controls .controls {
	margin: 0px !important;
}


/* TODO: this is breaking the dataset.edit page.  My hunch is that this was meant to counteract a section that is indented too far to the right.  I'm guessing
   the root problem is a grid-size div that is not inside of a .row element.   If so, remove this this rule entirely.  otherwise, identify the specific areas that
   need this workaround and give them unique class name so we dont over-select which elements get move over */
/*
body.edit article.span9>div,body.edit article.span9>form {
	margin-left: -40px;
}
*/

table.repeatLastRow {
	margin-bottom: -20px;
}

body.edit h2 {
	margin-top: 3em;
}

.tableFormat a.title {
	font-weight: 600;
	font-size: 16px;
}

.down-arrow {
	border-left: 5px solid transparent;
	border-right: 5px solid transparent;
	border-top: 5px solid #555;
	display: inline;
	cursor: pointer;
	cursor: hand;
	position: relative;
	left: 700px;
	top: -32px;
}

.popover h2 {
	font-size: 13pt;
	font-weight: 500;
	line-height: 1pt !important;
	margin-top: 15px !important;
	padding: 0px !important;
}

.popover {
	width: 500px;
}

h3.popover-title {
	margin-top: 0px;
}

.GRID .resourceLink {
	font-size: 14px;
}

.control-label {
	font-weight: bold;
}

ol.MAP {
	margin-left: 1.2em !important;
}

ol.MAP .listItemPart {
	visibility: hidden;
	display: none;
}

.MAP h3 {
	font-size: 14px !important;
}


.resource-nav.navbar-static li  a {
	padding-left: 15px !important;
	padding-right: 15px !important;
	background-image: none !important;
}

.navbar-static.affix {
	width: 100% !important;
	left: 0px !important;
}

.subnavbar.resource-nav {
	margin: -3px 5px 25px 5px !important;
}

#fakeSubmitButton {
	margin-top: 5px;
}

.tdar-slider .carousel-inner .item {
	height: 310px !important;
	margin-left: 80px;
	margin-right: 80px;
	margin-top: auto;
	margin-bottom: auto;
}

.no-indent {
	margin-left: 0px !important;
}

/* this should not be necessary */
label.help-inline[generated="true"] {
	display: none;
	visibility: hidden;
}

/*FIXME: we are doing this hack because the contents of the left-pane can't fit in a .span9  (view page and edit page)  */
/* see TDAR-2634, remove this css rule when ticket closed */
article+aside.span3>div {
	margin-left: 40px !important;
	/*    float: right; */
}

/* Normally I like the default bootstrap styles... but hot pink for CODE tags?  Really? */
code {
	color: navy;
}

.horizontal-rule {
	border-bottom: solid black 1px;
}

aside.tdar-icon:before {
	margin: 0 5px 0 0;
}

.responsive-large-desktop i.document-bg-large {
	background: url(/images/r4/resource-types-large.gif) 0px 0px no-repeat;
	width: 230px;
	height: 230px;
	display: inline-block;
}
/* ... */

